--- a/app/src/main/res/values-ka/strings.xml
+++ b/app/src/main/res/values-ka/strings.xml
@@ -11,7 +11,7 @@
    See the License for the specific language governing permissions and
    limitations under the License.
  -->
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 	<string name="app_name">UnicodePad</string>
 	<string name="delete">წაშლა</string>
 	<string name="desc">დეტალები</string>
@@ -93,10 +93,10 @@
 	<string name="legal">იურიდიული</string>
 	<string name="legal_uni">Unicode®</string>
 	<string name="legal_uni2">ეს პროგრამა შეიცავს Unicode მონაცემთა ფაილის შეცვლილ ვერსიას.
-საავტორო უფლება © 1991-2020 Unicode, Inc. ყველა უფლება დაცულია.
-განაწილებულია გამოყენების პირობებით
+Copyright © 1991-2021 Unicode, Inc. All rights reserved.
+Distributed under the Terms of Use in
 http://www.unicode.org/copyright.html.</string>
-	<string name="legal_app">UnicodePad 2.9.1</string>
+	<string name="legal_app">UnicodePad 2.10.4</string>
 	<string name="legal_app2">UnicodePad არის ლიცენზირებული Apache License, ვერსია2.0-ით
 https://github.com/Ryosuke839/UnicodePad</string>
 </resources>
