--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -386,10 +386,10 @@
 	<string name="legal">Juridisk information</string>
 	<string name="legal_uni">Unicode®</string>
 	<string name="legal_uni2">Denna applikation innehåller en modifierad version av Unicode Data File.
-Upphovsrätt © 1991-2020 Unicode, Inc. Alla rättigheter förbehållna.
-Distribueras enligt användarvillkoren i
+Copyright © 1991-2021 Unicode, Inc. All rights reserved.
+Distributed under the Terms of Use in
 http://www.unicode.org/copyright.html.</string>
-	<string name="legal_app">UnicodePad 2.9.1</string>
+	<string name="legal_app">UnicodePad 2.10.4</string>
 	<string name="legal_app2">UnicodePad är licensierad under Apache-licensen, version2.0
 https://github.com/Ryosuke839/UnicodePad</string>
 	<string name="no_ad_desc">Visa inte annonser</string>
